position fix for dark mode

--- a/css/resume.css
+++ b/css/resume.css
@@ -106,6 +106,12 @@ h2 {
   columns: #343a40 !important;
 }
 
+.list-float-item {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+}
+
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 600;
   text-transform: uppercase;
